# comedy_store_transcription

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  batch.ps1  batch_chapters.ps1  main.js  naming.ps1  package-lock.json  package.json  player.sh  playwright.config.ts  pyproject.toml  replace.ps1  single.ps1  tsconfig.json  vitest.config.ts
.github/workflows/: deploy.yml
data/: episodes.json
data/subtitles/: comedy_2020_ep1.json  comedy_2020_ep2.json  comedy_2020_ep3.json  comedy_2020_ep4.json  פרק_001-21_12_08.json  פרק_002-1_1_09.json  פרק_003-4_1_09.json  פרק_004-21_12_18.json  פרק_005.json  פרק_006.json  פרק_007.json  פרק_008.json  פרק_009.json  פרק_010.json  פרק_011.json  פרק_012.json  פרק_013.json  פרק_014.json  פרק_015.json  פרק_016.json  פרק_017.json  פרק_018.json  פרק_019.json  פרק_020-ראש_השנה.json  פרק_021-לקט_סיום_העונה.json  פרק_022-25_6_09.json  פרק_023-26_6_09.json  פרק_024-29_6_09.json  פרק_025-30_6_09.json  פרק_026-1_7_09.json  פרק_027-8_7_09.json  פרק_028-6_7_09.json  פרק_029-12_7_09.json  פרק_030-חנוכה_א_13_07_09.json  פרק_031-חנוכה_ב_16_07_09.json  פרק_032-17_07_09.json  פרק_033-18_7_09.json  (+75 more)
docker/: batch.sh  entrypoint.sh  run_batch.sh  run_single.sh  single.sh
scripts/: batch.ps1  batch_chapters.ps1  build_data.py  chapters.py  convert_encoding.py  diarize.py  naming.ps1  postprocess.py  replace.ps1  single.ps1
src/: highlight.ts  loader.ts  main.ts  perf.ts  router.ts  search.ts  sidebar.ts  types.ts  utils.ts
static/: index.html  style.css
tests/: test_build_data.py  test_postprocess.py
(+466 files in other folders)
